--- a/index.html
+++ b/index.html
@@ -2,10 +2,47 @@
 	<head>
 		<script src="js/mail-generator.js"></script>
 		<link href="css/style.css" rel="stylesheet" media="screen">
+	<script>
+		window.onload = function(){
+			var messageCount = 0;
+			var msgColor = "odd"
+
+			function processNewMessage() {
+				alert('Howdy');
+					var msgData = getNewMessage();
+
+					var newMsg = document.createElement('div');
+					newMsg.setAttribute('id', 'message'+ ++messageCount);
+					newMsg.setAttribute('class', msgColor);
+
+					var newCol;
+					newCol = document.createElement('div');
+					newCol.setAttribute('class', 'date');
+					newCol.innerHTML = msgData.date.toLocaleString();
+					newMsg.appendChild(newCol);
+
+					newCol = document.createElement('div')
+			}
+		}
+	</script>
 	</head>
 	<body>
 		<div class="container" id="main">
-			Build Me!
+			<div class="header" id="headers">
+				<span class="header date">
+					date
+				</span>
+				<span class="header sender">
+					sender
+				</span>
+				<span class="header subject">
+					subject
+				</span>
+				<span class="body">
+					body
+				</span>
+			</div>
+		
 		</div>
 	</body>
 </html>
